SERVER-7612 explicit primary read pref does not work well with shard versioning

Ensure that selectNodeUsingTags will use the same connection to the primary with checkMaster